--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
                 <a href="#">Início</a>
             </li>
             <li>
-                <a href="#">Destaques</a>
+                <a href="#">Categorias</a>
             </li>
             <li>
                 <a href="#">Contato</a>
@@ -35,54 +35,73 @@
 
    <section>
 
-    <h1>produtos</h1>
+    <h1>camisetas</h1>
     <div class="container-mostruario">
         <div class="card-roupa">
             <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 1</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
+            
         </div>
 
         <div class="card-roupa">
-            <img src="assets/img/camiseta2.png" alt="">
+            <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 2</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
         </div>
 
         <div class="card-roupa">
-            <img src="assets/img/camiseta2.png" alt="">
+            <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 3</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
         </div>
 
         <div class="card-roupa">
             <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 4</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
         </div>
 
         <div class="card-roupa">
             <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 5</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
         </div>
 
         <div class="card-roupa">
-            <img src="assets/img/camiseta2.png" alt="">
+            <img src="assets/img/camiseta1.png" alt="">
             <h3>Camiseta 6</h3>
-            <p>Lorem ipsum dolor</p>
+            <p>camiseta 100% algodão</p>
             <h5>$$$</h5>
-            <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            <div class="botoes">
+                <button class="botao">Comprar agora</button>
+                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+            </div>
         </div>
 
     </div>
@@ -92,7 +111,7 @@
 
    <script>
     function goToBag(){
-        
+        $("#").load("carrinho.html")
     }
    </script>
 
