--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,7 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
             
         </div>
@@ -56,7 +56,7 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
         </div>
 
@@ -67,7 +67,7 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
         </div>
 
@@ -78,7 +78,7 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
         </div>
 
@@ -100,20 +100,13 @@
             <h5>$$$</h5>
             <div class="botoes">
                 <button class="botao">Comprar agora</button>
-                <button class="botao" onclick="goToBag()">Adicionar ao carrinho</button>
+                <button class="botao" onclick="window.location.href = 'carrinho.html'">Adicionar ao carrinho</button>
             </div>
         </div>
 
     </div>
 
    </section>
-
-
-   <script>
-    function goToBag(){
-        $("#").load("carrinho.html")
-    }
-   </script>
 
    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
